--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Jun 28 2022 21:27:18 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Jul 04 2022 22:31:28 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="62800fba7ec57999e13e805c" data-wf-site="62799603e61eb4762e6434db">
 <head>
   <meta charset="utf-8">
-  <title>Erin Fuller Portfolio | Graphic Designer</title>
-  <meta content="Erin Fuller is a graphic designer in New York City with a passion for transformation, entrepreneurial spirit, and a strong background in visual and interaction design with human-centered methodologies." name="description">
-  <meta content="Erin Fuller Portfolio | Graphic Designer" property="og:title">
-  <meta content="Erin Fuller is a graphic designer in New York City with a passion for transformation, entrepreneurial spirit, and a strong background in visual and interaction design with human-centered methodologies." property="og:description">
-  <meta content="Erin Fuller Portfolio | Graphic Designer" property="twitter:title">
-  <meta content="Erin Fuller is a graphic designer in New York City with a passion for transformation, entrepreneurial spirit, and a strong background in visual and interaction design with human-centered methodologies." property="twitter:description">
+  <title>Erin Fuller Portfolio | Product Designer</title>
+  <meta content="Erin Fuller is a product designer in New York City with a passion for transformation, entrepreneurial spirit, and a strong background in visual and interaction design with human-centered methodologies. Her background includes time at The Commons Project Foundation and an academic career at Carnegie Mellon University&#x27;s Human-Computer Interaction Institute and Swartz Center for Entrepreneurship." name="description">
+  <meta content="Erin Fuller Portfolio | Product Designer" property="og:title">
+  <meta content="Erin Fuller is a product designer in New York City with a passion for transformation, entrepreneurial spirit, and a strong background in visual and interaction design with human-centered methodologies. Her background includes time at The Commons Project Foundation and an academic career at Carnegie Mellon University&#x27;s Human-Computer Interaction Institute and Swartz Center for Entrepreneurship." property="og:description">
+  <meta content="Erin Fuller Portfolio | Product Designer" property="twitter:title">
+  <meta content="Erin Fuller is a product designer in New York City with a passion for transformation, entrepreneurial spirit, and a strong background in visual and interaction design with human-centered methodologies. Her background includes time at The Commons Project Foundation and an academic career at Carnegie Mellon University&#x27;s Human-Computer Interaction Institute and Swartz Center for Entrepreneurship." property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -101,7 +101,7 @@
           <a href="selfie-kiosk.html" class="subnav-link w-dropdown-link">Selfie Kiosk</a>
         </nav>
       </div>
-      <a href="documents/ErinFuller-Resume-June2022-Formatted.pdf" class="nav-link third">Resume</a>
+      <a href="documents/ErinFuller-Resume-July2022.pdf" class="nav-link third">Resume</a>
       <div class="social-link-wrapper">
         <a href="https://www.linkedin.com/in/erincfuller/" target="_blank" class="linkedin-logo w-inline-block">
           <div class="html-embed w-embed"><svg width="23" height="22" viewbox="0 0 23 22" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -119,7 +119,7 @@
             <div data-w-id="85168aed-abc2-0aba-54df-d255029dc9ec" class="home-header-supertitle">Hi, nice to meet you. I’m</div>
             <div data-w-id="d973c807-9673-f1c3-5097-d6eda8d985a6" class="home-header">Erin Fuller</div>
             <div class="div-block-8">
-              <a href="https://drive.google.com/file/d/1vKTM9mgl0jHYUoYGBtiIeKCZekTwNwNt/view" target="_blank" class="hero-button w-inline-block">
+              <a href="documents/ErinFuller-Resume-July2022.pdf" target="_blank" class="hero-button w-inline-block">
                 <div class="hero-button-content">Resume</div>
               </a>
               <a href="https://www.linkedin.com/in/erincfuller/" target="_blank" class="hero-button w-inline-block">
@@ -127,7 +127,7 @@
               </a>
             </div>
           </div>
-          <div class="hero-split"><img src="images/IMG_3571.jpeg" loading="lazy" sizes="100vw" srcset="images/IMG_3571-p-500.jpeg 500w, images/IMG_3571-p-800.jpeg 800w, images/IMG_3571-p-1080.jpeg 1080w, images/IMG_3571-p-1600.jpeg 1600w, images/IMG_3571-p-2000.jpeg 2000w, images/IMG_3571-p-2600.jpeg 2600w, images/IMG_3571.jpeg 3024w" alt="" class="shadow-two"></div>
+          <div class="hero-split"><img src="images/headshot.png" loading="lazy" srcset="images/headshot-p-500.png 500w, images/headshot-p-800.png 800w, images/headshot-p-1080.png 1080w, images/headshot-p-1600.png 1600w, images/headshot.png 5208w" sizes="100vw" alt="" class="shadow-two"></div>
         </div>
       </div>
     </section>
@@ -139,7 +139,7 @@
     <div id="projects-section" class="projects-section">
       <h1 class="heading-1 plain">Projects</h1>
       <div class="projects">
-        <a id="w-node-e4e63d0e-0346-d5e1-32d6-ccb042dc6fd2-e13e805c" href="tcp.html" class="project-card home tcp w-inline-block"><img src="images/Frame-2435.png" loading="lazy" srcset="images/Frame-2435-p-500.png 500w, images/Frame-2435-p-800.png 800w, images/Frame-2435-p-1080.png 1080w, images/Frame-2435.png 1224w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 95vw, (max-width: 991px) 47vw, 15vw" alt="The Commons Project" class="project-image tcp">
+        <a id="w-node-e4e63d0e-0346-d5e1-32d6-ccb042dc6fd2-e13e805c" href="tcp.html" class="project-card home tcp w-inline-block"><img src="images/Frame-2435.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 95vw, (max-width: 991px) 47vw, 15vw" srcset="images/Frame-2435-p-500.png 500w, images/Frame-2435-p-800.png 800w, images/Frame-2435-p-1080.png 1080w, images/Frame-2435.png 1224w" alt="The Commons Project" class="project-image tcp">
           <div class="project-card-description">
             <div class="description-wrapper w-row">
               <div class="w-col w-col-10 w-col-small-10 w-col-tiny-10">
