--- a/quarpanion.html
+++ b/quarpanion.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Jun 28 2022 21:27:18 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Jul 04 2022 22:31:28 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="62846a11f6336b719028bd6e" data-wf-site="62799603e61eb4762e6434db">
 <head>
   <meta charset="utf-8">
   <title>Quarpanion</title>
-  <meta content="COVID-19 is not the rapid apocalypse Hollywood loves, but it is a monumental cultural period that is changing the way we live. The level of restriction put on individuals ranges in severity and duration under different national and local governments, but what remains the same for all is this is hard. I began research by looking into peopleʼs emotional state and asking how theyʼre dealing with quarantine as individuals - exploring routine and habits lost or gained during this time." name="description">
+  <meta content="Quarpanion was an speculative project during the first months of the global pandemic - exploring how college aged demographics were grappling with the forced solitude and if there could be tech solutions to ease the pain." name="description">
   <meta content="Quarpanion" property="og:title">
-  <meta content="COVID-19 is not the rapid apocalypse Hollywood loves, but it is a monumental cultural period that is changing the way we live. The level of restriction put on individuals ranges in severity and duration under different national and local governments, but what remains the same for all is this is hard. I began research by looking into peopleʼs emotional state and asking how theyʼre dealing with quarantine as individuals - exploring routine and habits lost or gained during this time." property="og:description">
+  <meta content="Quarpanion was an speculative project during the first months of the global pandemic - exploring how college aged demographics were grappling with the forced solitude and if there could be tech solutions to ease the pain." property="og:description">
   <meta content="Quarpanion" property="twitter:title">
-  <meta content="COVID-19 is not the rapid apocalypse Hollywood loves, but it is a monumental cultural period that is changing the way we live. The level of restriction put on individuals ranges in severity and duration under different national and local governments, but what remains the same for all is this is hard. I began research by looking into peopleʼs emotional state and asking how theyʼre dealing with quarantine as individuals - exploring routine and habits lost or gained during this time." property="twitter:description">
+  <meta content="Quarpanion was an speculative project during the first months of the global pandemic - exploring how college aged demographics were grappling with the forced solitude and if there could be tech solutions to ease the pain." property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -105,7 +105,7 @@
         <div class="project-header-subtitle quarpanion">Design for Social Innovation and Interation Design Studio | March - May 2020</div>
       </div>
       <div class="project-hero-right w-col w-col-8 w-col-stack">
-        <div class="project-hero-image-wrapper quarpanion"><img src="images/image-8.png" loading="lazy" sizes="100vw" width="663" srcset="images/image-8-p-500.png 500w, images/image-8-p-800.png 800w, images/image-8-p-1080.png 1080w, images/image-8-p-1600.png 1600w, images/image-8.png 1824w" alt="Usable on Amazon Echo and Google Home" class="image-2"></div>
+        <div class="project-hero-image-wrapper quarpanion"><img src="images/image-8.png" loading="lazy" srcset="images/image-8-p-500.png 500w, images/image-8-p-800.png 800w, images/image-8-p-1080.png 1080w, images/image-8-p-1600.png 1600w, images/image-8.png 1824w" width="663" sizes="100vw" alt="Usable on Amazon Echo and Google Home" class="image-2"></div>
       </div>
     </div>
   </div>
@@ -136,17 +136,17 @@
         <div class="text-block quarpanion-slider-text">Tons</div>
         <div class="text-block quarpanion-slider-text above-label right">Tons</div>
       </div>
-      <div class="text-block">Followed with ... “What are some guilt drivers?”</div><img src="images/Text-Bubbles-1.png" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 90vw, (max-width: 991px) 76vw, 72vw" srcset="images/Text-Bubbles-1-p-500.png 500w, images/Text-Bubbles-1-p-800.png 800w, images/Text-Bubbles-1-p-1080.png 1080w, images/Text-Bubbles-1-p-1600.png 1600w, images/Text-Bubbles-1.png 2004w" alt="Thought bubbles" class="text-bubbles-1">
+      <div class="text-block">Followed with ... “What are some guilt drivers?”</div><img src="images/Text-Bubbles-1.png" loading="lazy" srcset="images/Text-Bubbles-1-p-500.png 500w, images/Text-Bubbles-1-p-800.png 800w, images/Text-Bubbles-1-p-1080.png 1080w, images/Text-Bubbles-1-p-1600.png 1600w, images/Text-Bubbles-1.png 2004w" sizes="(max-width: 479px) 92vw, (max-width: 767px) 90vw, (max-width: 991px) 76vw, 72vw" alt="Thought bubbles" class="text-bubbles-1">
       <div class="text-block">Most, 66%, said they were getting the support they needed, but 34% said they were not getting the support they needed. Not to mention those who felt they were not getting proper support would be less likely to respond to non-anonymous polls.</div>
       <div class="columns-3 w-row">
         <div class="stretch-column text-bubbles w-col w-col-6">
-          <div class="text-block">What kind of support do you feel like you&#x27;re missing?</div><img src="images/Text-Bubbles-2.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 94vw, (max-width: 991px) 66vw, 525px" srcset="images/Text-Bubbles-2-p-500.png 500w, images/Text-Bubbles-2-p-800.png 800w, images/Text-Bubbles-2-p-1080.png 1080w, images/Text-Bubbles-2.png 1250w" alt="Thought bubbles" class="text-bubbles-2">
+          <div class="text-block">What kind of support do you feel like you&#x27;re missing?</div><img src="images/Text-Bubbles-2.png" loading="lazy" srcset="images/Text-Bubbles-2-p-500.png 500w, images/Text-Bubbles-2-p-800.png 800w, images/Text-Bubbles-2-p-1080.png 1080w, images/Text-Bubbles-2.png 1250w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 94vw, (max-width: 991px) 66vw, 525px" alt="Thought bubbles" class="text-bubbles-2">
         </div>
         <div class="stretch-column text-bubbles w-col w-col-6">
-          <div class="text-block">What kind of support do you feel like you&#x27;re missing?</div><img src="images/Text-Bubbles-3.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 94vw, (max-width: 991px) 66vw, 525px" srcset="images/Text-Bubbles-3-p-500.png 500w, images/Text-Bubbles-3-p-800.png 800w, images/Text-Bubbles-3-p-1080.png 1080w, images/Text-Bubbles-3.png 1251w" alt="Thought bubbles" class="text-bubbles-2">
+          <div class="text-block">What kind of support do you feel like you&#x27;re missing?</div><img src="images/Text-Bubbles-3.png" loading="lazy" srcset="images/Text-Bubbles-3-p-500.png 500w, images/Text-Bubbles-3-p-800.png 800w, images/Text-Bubbles-3-p-1080.png 1080w, images/Text-Bubbles-3.png 1251w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 94vw, (max-width: 991px) 66vw, 525px" alt="Thought bubbles" class="text-bubbles-2">
         </div>
       </div>
-      <div class="text-block">Most responders, 71%, said they gained a new hobby or habit during quarantine.<br><br>However, 65% of people also said they lost a hobby or habit during quarantine.<br><br>Overall ... healthy or not, here&#x27;s how people have been coping:</div><img src="images/Text-Bubbles-4.png" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 90vw, (max-width: 991px) 76vw, 77vw" srcset="images/Text-Bubbles-4-p-500.png 500w, images/Text-Bubbles-4-p-800.png 800w, images/Text-Bubbles-4-p-1080.png 1080w, images/Text-Bubbles-4-p-1600.png 1600w, images/Text-Bubbles-4-p-2000.png 2000w, images/Text-Bubbles-4.png 2494w" alt="Thought bubbles" class="text-bubbles-4">
+      <div class="text-block">Most responders, 71%, said they gained a new hobby or habit during quarantine.<br><br>However, 65% of people also said they lost a hobby or habit during quarantine.<br><br>Overall ... healthy or not, here&#x27;s how people have been coping:</div><img src="images/Text-Bubbles-4.png" loading="lazy" srcset="images/Text-Bubbles-4-p-500.png 500w, images/Text-Bubbles-4-p-800.png 800w, images/Text-Bubbles-4-p-1080.png 1080w, images/Text-Bubbles-4-p-1600.png 1600w, images/Text-Bubbles-4-p-2000.png 2000w, images/Text-Bubbles-4.png 2494w" sizes="(max-width: 479px) 92vw, (max-width: 767px) 90vw, (max-width: 991px) 76vw, 77vw" alt="Thought bubbles" class="text-bubbles-4">
       <div class="text-block">I also performed four long form interviews with peers:<br></div>
       <ol role="list" class="text-block">
         <li class="ordered-list-item">Early professional in the entertainment industry, graduated CMU 2 years ago, male</li>
@@ -158,7 +158,7 @@
       <h1 class="heading-1 quarpanion">How might we reframe how we see productivity during this time and what can we create to best foster motivation and productivity in a healthy way for individuals?</h1>
     </div>
     <div class="full-view-description home">
-      <div><img src="images/Screen-Shot-2022-05-01-at-8.00-1.png" loading="lazy" sizes="100vw" srcset="images/Screen-Shot-2022-05-01-at-8.00-1-p-500.png 500w, images/Screen-Shot-2022-05-01-at-8.00-1-p-800.png 800w, images/Screen-Shot-2022-05-01-at-8.00-1-p-1080.png 1080w, images/Screen-Shot-2022-05-01-at-8.00-1-p-1600.png 1600w, images/Screen-Shot-2022-05-01-at-8.00-1-p-2000.png 2000w, images/Screen-Shot-2022-05-01-at-8.00-1.png 2512w" alt="Tweet from Jenny Jaffe" class="twitter-block"></div>
+      <div><img src="images/Screen-Shot-2022-05-01-at-8.00-1.png" loading="lazy" srcset="images/Screen-Shot-2022-05-01-at-8.00-1-p-500.png 500w, images/Screen-Shot-2022-05-01-at-8.00-1-p-800.png 800w, images/Screen-Shot-2022-05-01-at-8.00-1-p-1080.png 1080w, images/Screen-Shot-2022-05-01-at-8.00-1-p-1600.png 1600w, images/Screen-Shot-2022-05-01-at-8.00-1-p-2000.png 2000w, images/Screen-Shot-2022-05-01-at-8.00-1.png 2512w" sizes="100vw" alt="Tweet from Jenny Jaffe" class="twitter-block"></div>
     </div>
     <div class="project-phase-section">
       <h1 class="heading-1 plain">04. Solution</h1>
@@ -172,7 +172,7 @@
     <div class="full-view-description home">
       <div>
         <div class="quarpanion-intro">Introducing: Quarpanion</div>
-        <div class="quarpanion-subintro">A conversational user interface “buddy” to act as a support system for those living alone. Whether in quarantine or beyond.</div><img src="images/image-8.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 95vw, 60vw" srcset="images/image-8-p-500.png 500w, images/image-8-p-800.png 800w, images/image-8-p-1080.png 1080w, images/image-8-p-1600.png 1600w, images/image-8.png 1824w" alt="Usable on Amazon Echo and Google Home" class="quarpanion-image">
+        <div class="quarpanion-subintro">A conversational user interface “buddy” to act as a support system for those living alone. Whether in quarantine or beyond.</div><img src="images/image-8.png" loading="lazy" srcset="images/image-8-p-500.png 500w, images/image-8-p-800.png 800w, images/image-8-p-1080.png 1080w, images/image-8-p-1600.png 1600w, images/image-8.png 1824w" sizes="(max-width: 479px) 100vw, (max-width: 991px) 95vw, 60vw" alt="Usable on Amazon Echo and Google Home" class="quarpanion-image">
       </div>
     </div>
     <div class="project-phase-section">
@@ -192,9 +192,9 @@
             </a>
           </div>
           <div class="w-tab-content">
-            <div data-w-tab="Tab 1" class="conversation-pane w-tab-pane"><img sizes="100vw" srcset="images/Morning-Check-in-p-500.png 500w, images/Morning-Check-in-p-800.png 800w, images/Morning-Check-in-p-1080.png 1080w, images/Morning-Check-in.png 1482w" src="images/Morning-Check-in.png" loading="lazy" alt=""></div>
-            <div data-w-tab="Tab 2" class="conversation-pane w-tab-pane"><img sizes="100vw" srcset="images/daytime-check-In-p-500.png 500w, images/daytime-check-In-p-800.png 800w, images/daytime-check-In-p-1080.png 1080w, images/daytime-check-In.png 1482w" src="images/daytime-check-In.png" loading="lazy" alt=""></div>
-            <div data-w-tab="Tab 3" class="conversation-pane evening w-tab-pane w--tab-active"><img sizes="100vw" srcset="images/Evening-check-In-p-500.png 500w, images/Evening-check-In-p-800.png 800w, images/Evening-check-In-p-1080.png 1080w, images/Evening-check-In.png 1482w" src="images/Evening-check-In.png" loading="lazy" alt=""></div>
+            <div data-w-tab="Tab 1" class="conversation-pane w-tab-pane"><img srcset="images/Morning-Check-in-p-500.png 500w, images/Morning-Check-in-p-800.png 800w, images/Morning-Check-in-p-1080.png 1080w, images/Morning-Check-in.png 1482w" sizes="100vw" src="images/Morning-Check-in.png" loading="lazy" alt=""></div>
+            <div data-w-tab="Tab 2" class="conversation-pane w-tab-pane"><img srcset="images/daytime-check-In-p-500.png 500w, images/daytime-check-In-p-800.png 800w, images/daytime-check-In-p-1080.png 1080w, images/daytime-check-In.png 1482w" sizes="100vw" src="images/daytime-check-In.png" loading="lazy" alt=""></div>
+            <div data-w-tab="Tab 3" class="conversation-pane evening w-tab-pane w--tab-active"><img srcset="images/Evening-check-In-p-500.png 500w, images/Evening-check-In-p-800.png 800w, images/Evening-check-In-p-1080.png 1080w, images/Evening-check-In.png 1482w" sizes="100vw" src="images/Evening-check-In.png" loading="lazy" alt=""></div>
           </div>
         </div>
       </div>
@@ -217,7 +217,7 @@
       </ul>
     </div>
     <div class="full-view-description home left-align">
-      <h1 class="heading-1 plain white">04. Solution</h1><img src="images/Screen-Shot-2022-05-01-at-8.10-1.png" loading="lazy" sizes="(max-width: 479px) 141.609375px, (max-width: 767px) 95vw, (max-width: 991px) 96vw, 68vw" srcset="images/Screen-Shot-2022-05-01-at-8.10-1-p-500.png 500w, images/Screen-Shot-2022-05-01-at-8.10-1-p-800.png 800w, images/Screen-Shot-2022-05-01-at-8.10-1-p-1080.png 1080w, images/Screen-Shot-2022-05-01-at-8.10-1-p-1600.png 1600w, images/Screen-Shot-2022-05-01-at-8.10-1-p-2000.png 2000w, images/Screen-Shot-2022-05-01-at-8.10-1.png 2512w" alt="Tweet from Scarlet4UrMa" class="twitter-block">
+      <h1 class="heading-1 plain white">04. Solution</h1><img src="images/Screen-Shot-2022-05-01-at-8.10-1.png" loading="lazy" srcset="images/Screen-Shot-2022-05-01-at-8.10-1-p-500.png 500w, images/Screen-Shot-2022-05-01-at-8.10-1-p-800.png 800w, images/Screen-Shot-2022-05-01-at-8.10-1-p-1080.png 1080w, images/Screen-Shot-2022-05-01-at-8.10-1-p-1600.png 1600w, images/Screen-Shot-2022-05-01-at-8.10-1-p-2000.png 2000w, images/Screen-Shot-2022-05-01-at-8.10-1.png 2512w" sizes="(max-width: 479px) 141.609375px, (max-width: 767px) 95vw, (max-width: 991px) 96vw, 68vw" alt="Tweet from Scarlet4UrMa" class="twitter-block">
     </div>
     <div class="project-phase-section">
       <h2 class="heading-3">People want to reduce screen time</h2>
@@ -242,7 +242,7 @@
     <h2 class="header-2 projects-header">See other projects</h2>
     <div class="project-card-wrapper w-row">
       <div class="w-col w-col-4 w-col-stack">
-        <a href="tcp.html" class="project-card w-inline-block"><img src="images/Frame-2435.png" loading="lazy" width="384" sizes="(max-width: 479px) 100vw, (max-width: 991px) 325px, 31vw" srcset="images/Frame-2435-p-500.png 500w, images/Frame-2435-p-800.png 800w, images/Frame-2435-p-1080.png 1080w, images/Frame-2435.png 1224w" alt="The Commons Project" class="project-image">
+        <a href="tcp.html" class="project-card w-inline-block"><img src="images/Frame-2435.png" loading="lazy" width="384" srcset="images/Frame-2435-p-500.png 500w, images/Frame-2435-p-800.png 800w, images/Frame-2435-p-1080.png 1080w, images/Frame-2435.png 1224w" sizes="(max-width: 479px) 245px, (max-width: 767px) 54vw, (max-width: 991px) 325px, 26vw" alt="The Commons Project" class="project-image">
           <div class="project-card-description">
             <div class="description-wrapper w-row">
               <div class="w-col w-col-8 w-col-medium-8">
