--- a/selfie-kiosk.html
+++ b/selfie-kiosk.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Jun 28 2022 21:27:18 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Jul 04 2022 22:31:28 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="62849919b254a687730b1e23" data-wf-site="62799603e61eb4762e6434db">
 <head>
   <meta charset="utf-8">
   <title>Selfie Kiosk</title>
-  <meta content="User-Centered Research and Evaluation for improving the livability of Downtown Pittsburgh through public art" name="description">
+  <meta content="User-Centered Research and Evaluation project for improving the livability of Downtown Pittsburgh through public art" name="description">
   <meta content="Selfie Kiosk" property="og:title">
-  <meta content="User-Centered Research and Evaluation for improving the livability of Downtown Pittsburgh through public art" property="og:description">
+  <meta content="User-Centered Research and Evaluation project for improving the livability of Downtown Pittsburgh through public art" property="og:description">
   <meta content="Selfie Kiosk" property="twitter:title">
-  <meta content="User-Centered Research and Evaluation for improving the livability of Downtown Pittsburgh through public art" property="twitter:description">
+  <meta content="User-Centered Research and Evaluation project for improving the livability of Downtown Pittsburgh through public art" property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -113,7 +113,7 @@
             <h2 class="header-2 skiosk">Improving the livability of Downtown Pittsburgh through public art</h2>
             <div class="text-block _24-margin card-text selfie-kios-hero-subtext">User Centered Research and Evaluation</div>
             <div class="text-block _24-margin card-text">Celine Chang, Dana Frostig, Erin Fuller, Stephanie Wang</div>
-          </div><img src="images/image-16.jpg" loading="lazy" sizes="(max-width: 991px) 100vw, 75vw" srcset="images/image-16-p-500.jpeg 500w, images/image-16-p-800.jpeg 800w, images/image-16-p-1080.jpeg 1080w, images/image-16-p-1600.jpeg 1600w, images/image-16-p-2000.jpeg 2000w, images/image-16-p-2600.jpeg 2600w, images/image-16.jpg 2674w" alt="" class="skiosk-hero-image">
+          </div><img src="images/image-16.jpg" loading="lazy" srcset="images/image-16-p-500.jpeg 500w, images/image-16-p-800.jpeg 800w, images/image-16-p-1080.jpeg 1080w, images/image-16-p-1600.jpeg 1600w, images/image-16-p-2000.jpeg 2000w, images/image-16-p-2600.jpeg 2600w, images/image-16.jpg 2674w" sizes="100vw" alt="" class="skiosk-hero-image">
         </div>
       </div>
     </div>
@@ -124,23 +124,23 @@
     <div class="content-section">
       <h1 class="heading-1 plain">Research methods</h1>
       <div class="w-layout-grid selfie-kiosk-cards">
-        <div id="w-node-fb0a5dbc-d0b1-dd2d-3253-47dc7e787148-730b1e23" class="selfie-kiosk-card"><img src="images/image-129.png" loading="lazy" id="w-node-fb0a5dbc-d0b1-dd2d-3253-47dc7e787149-730b1e23" sizes="(max-width: 479px) 76vw, (max-width: 767px) 43vw, (max-width: 991px) 28vw, 22vw" srcset="images/image-129-p-500.png 500w, images/image-129.png 681w" alt="" class="card-image">
+        <div id="w-node-fb0a5dbc-d0b1-dd2d-3253-47dc7e787148-730b1e23" class="selfie-kiosk-card"><img src="images/image-129.png" loading="lazy" id="w-node-fb0a5dbc-d0b1-dd2d-3253-47dc7e787149-730b1e23" srcset="images/image-129-p-500.png 500w, images/image-129.png 681w" sizes="(max-width: 479px) 76vw, (max-width: 767px) 43vw, (max-width: 991px) 28vw, 22vw" alt="" class="card-image">
           <h3 class="heading-3">Background research</h3>
           <div class="text-block _24-margin card-text">What’s the current state of the relationship between art viewers and public art?</div>
         </div>
-        <div class="selfie-kiosk-card"><img src="images/image-130.png" loading="lazy" id="w-node-b4a4ba71-2898-25de-0b72-068aab8ef938-730b1e23" sizes="(max-width: 479px) 76vw, (max-width: 767px) 43vw, (max-width: 991px) 28vw, 22vw" srcset="images/image-130-p-500.png 500w, images/image-130.png 680w" alt="" class="card-image">
+        <div class="selfie-kiosk-card"><img src="images/image-130.png" loading="lazy" id="w-node-b4a4ba71-2898-25de-0b72-068aab8ef938-730b1e23" srcset="images/image-130-p-500.png 500w, images/image-130.png 680w" sizes="(max-width: 479px) 76vw, (max-width: 767px) 43vw, (max-width: 991px) 28vw, 22vw" alt="" class="card-image">
           <h3 class="heading-3">Observe and intercept</h3>
           <div class="text-block _24-margin card-text">With whom and how do art viewers share their experience with public art?</div>
         </div>
-        <div class="selfie-kiosk-card"><img src="images/image-131.png" loading="lazy" id="w-node-eb01887f-ef5b-7b02-2f9e-a5f54a8bcb03-730b1e23" sizes="(max-width: 479px) 76vw, (max-width: 767px) 43vw, (max-width: 991px) 28vw, 22vw" srcset="images/image-131-p-500.png 500w, images/image-131.png 681w" alt="" class="card-image">
+        <div class="selfie-kiosk-card"><img src="images/image-131.png" loading="lazy" id="w-node-eb01887f-ef5b-7b02-2f9e-a5f54a8bcb03-730b1e23" srcset="images/image-131-p-500.png 500w, images/image-131.png 681w" sizes="(max-width: 479px) 76vw, (max-width: 767px) 43vw, (max-width: 991px) 28vw, 22vw" alt="" class="card-image">
           <h3 class="heading-3">Think aloud protocol</h3>
           <div class="text-block _24-margin card-text">What is viewer’s current experience with sharing art on social media? What types of art do they choose to share and why?</div>
         </div>
-        <div id="w-node-_69798f99-a108-e338-4028-46fc9c316fee-730b1e23" class="selfie-kiosk-card"><img src="images/image-133.png" loading="lazy" id="w-node-_69798f99-a108-e338-4028-46fc9c316fef-730b1e23" sizes="(max-width: 479px) 76vw, (max-width: 767px) 43vw, (max-width: 991px) 28vw, 22vw" srcset="images/image-133-p-500.png 500w, images/image-133.png 681w" alt="" class="card-image">
+        <div id="w-node-_69798f99-a108-e338-4028-46fc9c316fee-730b1e23" class="selfie-kiosk-card"><img src="images/image-133.png" loading="lazy" id="w-node-_69798f99-a108-e338-4028-46fc9c316fef-730b1e23" srcset="images/image-133-p-500.png 500w, images/image-133.png 681w" sizes="(max-width: 479px) 76vw, (max-width: 767px) 43vw, (max-width: 991px) 28vw, 22vw" alt="" class="card-image">
           <h3 class="heading-3">Other</h3>
           <div class="text-block _24-margin card-text">How do art viewers feel interacting with the kiosk? Did the kiosk improve shareability of public art?</div>
         </div>
-        <div class="selfie-kiosk-card"><img src="images/image-132.png" loading="lazy" id="w-node-_69798f99-a108-e338-4028-46fc9c316fe9-730b1e23" sizes="(max-width: 479px) 76vw, (max-width: 767px) 43vw, (max-width: 991px) 28vw, 22vw" srcset="images/image-132-p-500.png 500w, images/image-132.png 681w" alt="" class="card-image">
+        <div class="selfie-kiosk-card"><img src="images/image-132.png" loading="lazy" id="w-node-_69798f99-a108-e338-4028-46fc9c316fe9-730b1e23" srcset="images/image-132-p-500.png 500w, images/image-132.png 681w" sizes="(max-width: 479px) 76vw, (max-width: 767px) 43vw, (max-width: 991px) 28vw, 22vw" alt="" class="card-image">
           <h3 class="heading-3">Research</h3>
           <div class="text-block _24-margin card-text">Do the user needs we discovered resonate with people?</div>
         </div>
@@ -157,7 +157,7 @@
             <li class="list-item">Even in a familiar environment, novelty or change such as the presence of a kiosk, will attract attention.</li>
             <li class="list-item">Opportunities to capture memories strengthen the bonds between viewers and their city.</li>
           </ol>
-        </div><img src="images/Frame-2230.png" loading="lazy" sizes="(max-width: 767px) 92vw, (max-width: 991px) 574px, 52vw" srcset="images/Frame-2230-p-500.png 500w, images/Frame-2230-p-800.png 800w, images/Frame-2230.png 1348w" alt="" class="selfie-kiosk-text-bubbles">
+        </div><img src="images/Frame-2230.png" loading="lazy" srcset="images/Frame-2230-p-500.png 500w, images/Frame-2230-p-800.png 800w, images/Frame-2230.png 1348w" sizes="(max-width: 479px) 83vw, (max-width: 767px) 42vw, (max-width: 991px) 40vw, 31vw" alt="" class="selfie-kiosk-text-bubbles">
       </div>
     </div>
     <div class="content-section">
@@ -188,7 +188,7 @@
               </svg></div>
             <div class="text-block _24-margin">Send and share</div>
           </div>
-        </div><img src="images/image-10.png" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 94vw, (max-width: 991px) 647px, 53vw" srcset="images/image-10-p-500.png 500w, images/image-10-p-800.png 800w, images/image-10-p-1080.png 1080w, images/image-10.png 1494w" alt="" class="image-15">
+        </div><img src="images/image-10.png" loading="lazy" srcset="images/image-10-p-500.png 500w, images/image-10-p-800.png 800w, images/image-10-p-1080.png 1080w, images/image-10.png 1494w" sizes="(max-width: 479px) 92vw, (max-width: 767px) 94vw, (max-width: 991px) 647px, 43vw" alt="" class="image-15">
       </div>
       <div class="text-block">Allowing people to make a connection with the community, without the hassle - no need to figure out the perfect angle, no need to find someone to take a photo, no worries if the picture will turn out blurry or wonky.</div>
     </div>
@@ -196,7 +196,7 @@
       <h2 class="header-2 projects-header">See other projects</h2>
       <div class="project-card-wrapper w-row">
         <div class="w-col w-col-4 w-col-stack">
-          <a href="tcp.html" class="project-card w-inline-block"><img src="images/Frame-2435.png" loading="lazy" width="384" sizes="(max-width: 479px) 100vw, (max-width: 991px) 325px, 31vw" srcset="images/Frame-2435-p-500.png 500w, images/Frame-2435-p-800.png 800w, images/Frame-2435-p-1080.png 1080w, images/Frame-2435.png 1224w" alt="The Commons Project" class="project-image">
+          <a href="tcp.html" class="project-card w-inline-block"><img src="images/Frame-2435.png" loading="lazy" width="384" srcset="images/Frame-2435-p-500.png 500w, images/Frame-2435-p-800.png 800w, images/Frame-2435-p-1080.png 1080w, images/Frame-2435.png 1224w" sizes="(max-width: 479px) 245px, (max-width: 767px) 48vw, (max-width: 991px) 325px, 24vw" alt="The Commons Project" class="project-image">
             <div class="project-card-description">
               <div class="description-wrapper w-row">
                 <div class="w-col w-col-8 w-col-medium-8">
