--- a/tcp.html
+++ b/tcp.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Jun 28 2022 21:27:18 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Jul 04 2022 22:31:28 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="62799603e61eb42bae6434dc" data-wf-site="62799603e61eb4762e6434db">
 <head>
   <meta charset="utf-8">
   <title>The Commons Project</title>
-  <meta content="While the core of the UX had already been designed before I joined The Commons Project, my role(s) within the CommonPass team expanded beyond the product design." name="description">
+  <meta content="Erin&#x27;s work at The Commons Project Foundation as the sole product designer - performing UX research and designing the UX of CommonHealth, the Android equivalent of Apple Health, CommonPass, a leading COVID test and vaccination verification app for travel during the height of the pandemic, along with building other parts of the health data ecosystem." name="description">
   <meta content="The Commons Project" property="og:title">
-  <meta content="While the core of the UX had already been designed before I joined The Commons Project, my role(s) within the CommonPass team expanded beyond the product design." property="og:description">
+  <meta content="Erin&#x27;s work at The Commons Project Foundation as the sole product designer - performing UX research and designing the UX of CommonHealth, the Android equivalent of Apple Health, CommonPass, a leading COVID test and vaccination verification app for travel during the height of the pandemic, along with building other parts of the health data ecosystem." property="og:description">
   <meta content="The Commons Project" property="twitter:title">
-  <meta content="While the core of the UX had already been designed before I joined The Commons Project, my role(s) within the CommonPass team expanded beyond the product design." property="twitter:description">
+  <meta content="Erin&#x27;s work at The Commons Project Foundation as the sole product designer - performing UX research and designing the UX of CommonHealth, the Android equivalent of Apple Health, CommonPass, a leading COVID test and vaccination verification app for travel during the height of the pandemic, along with building other parts of the health data ecosystem." property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -105,11 +105,11 @@
         <div class="project-header-subtitle">December 2020 - Current</div>
       </div>
       <div class="project-hero-right w-col w-col-6 w-col-stack">
-        <div class="project-hero-image-wrapper"><img src="images/TCP-Project-Design.png" loading="lazy" sizes="(max-width: 479px) 93vw, (max-width: 767px) 86vw, (max-width: 991px) 660px, 49vw" srcset="images/TCP-Project-Design-p-500.png 500w, images/TCP-Project-Design-p-800.png 800w, images/TCP-Project-Design-p-1080.png 1080w, images/TCP-Project-Design-p-1600.png 1600w, images/TCP-Project-Design-p-2000.png 2000w, images/TCP-Project-Design-p-2600.png 2600w, images/TCP-Project-Design-p-3200.png 3200w, images/TCP-Project-Design.png 3577w" alt=""></div>
+        <div class="project-hero-image-wrapper"><img src="images/TCP-Project-Design.png" loading="lazy" srcset="images/TCP-Project-Design-p-500.png 500w, images/TCP-Project-Design-p-800.png 800w, images/TCP-Project-Design-p-1080.png 1080w, images/TCP-Project-Design-p-1600.png 1600w, images/TCP-Project-Design-p-2000.png 2000w, images/TCP-Project-Design-p-2600.png 2600w, images/TCP-Project-Design-p-3200.png 3200w, images/TCP-Project-Design.png 3577w" sizes="100vw" alt=""></div>
       </div>
     </div>
     <div class="full-view-description tcp">
-      <div>
+      <div class="div-block-17">
         <div class="project-description">The Commons Project is a non-profit public trust, established with support from the World Economic Forum and the Rockefeller Foundation, building solutions that empower people to access, manage, and share their data. <br><br>In less than three years, The Commons Project has built and launched a remarkable suite of digital products and services, many to address the collective need for the safe sharing of health records, verification of vaccination information and test results in the wake of the COVID-19 global pandemic.<br><br>These include:</div>
         <ul role="list" class="list project-description">
           <li>CommonHealth™, a service empowering Android users to collect, manage and share their health data<br></li>
@@ -123,7 +123,7 @@
     <div class="project-phase-section">
       <h3 class="heading-3 phase-superheader first">Phase 1 | CommonPass | Winter 2020 - Spring 2022</h3>
       <h1 class="heading-1">How might we provide verifiable and untampered proof of COVID test status for travel?</h1>
-      <div class="text-block">CommonPass was born with the vision of people importing their test results and (later) vaccine records and keeping them securely on their phones. Ultimately, the platform assesses whether the individual’s lab test results or vaccination records come from a trusted source and if they satisfy the health screening requirements of the destination they want to travel to. If the passenger satisfies the requirements, the platform creates a “yes” or “no” certificate that they can share without sharing any personal health data.</div><img src="images/TCP-Infographic-1.png" loading="lazy" srcset="images/TCP-Infographic-1-p-500.png 500w, images/TCP-Infographic-1-p-800.png 800w, images/TCP-Infographic-1-p-1080.png 1080w, images/TCP-Infographic-1-p-1600.png 1600w, images/TCP-Infographic-1-p-2000.png 2000w, images/TCP-Infographic-1.png 2002w" sizes="(max-width: 479px) 92vw, (max-width: 767px) 90vw, (max-width: 991px) 76vw, (max-width: 2412px) 83vw, 2002px" alt="CommonPass verified prior to onboarding" class="image-3">
+      <div class="text-block">CommonPass was born with the vision of people importing their test results and (later) vaccine records and keeping them securely on their phones. Ultimately, the platform assesses whether the individual’s lab test results or vaccination records come from a trusted source and if they satisfy the health screening requirements of the destination they want to travel to. If the passenger satisfies the requirements, the platform creates a “yes” or “no” certificate that they can share without sharing any personal health data.</div><img src="images/TCP-Infographic-1.png" loading="lazy" sizes="100vw" srcset="images/TCP-Infographic-1-p-500.png 500w, images/TCP-Infographic-1-p-800.png 800w, images/TCP-Infographic-1-p-1080.png 1080w, images/TCP-Infographic-1-p-1600.png 1600w, images/TCP-Infographic-1-p-2000.png 2000w, images/TCP-Infographic-1.png 2002w" alt="CommonPass verified prior to onboarding" class="image-3">
       <h2 class="heading-3">Personal role</h2>
       <div class="text-block _24-margin">While the core of the UX had already been designed before I joined The Commons Project, my role(s) within the CommonPass team expanded beyond the product design.</div>
       <ul role="list" class="text-block">
@@ -168,9 +168,18 @@
       </div>
       <h3 class="heading-3 phase-superheader">Phase 2 | SMART Health Card Ecosystem | Spring 2021 - Ongoing</h3>
       <h1 class="heading-1">How might we create an interoperable standard for health records?</h1>
-      <div class="text-block">With the upcoming vaccination schedules for most Americans, there was a need  to unify a standard for vaccination credentials. The SMART Health Card Framework was created to empower individuals to access a trustworthy and verifiable copy of their vaccination records in digital or paper form using open, interoperable standards. Individuals can then use those verifiable credentials for medical purposes and to demonstrate their health status to safely return to work, school, travel, and life.</div><img src="images/Group-2429.png" loading="lazy" width="836" sizes="(max-width: 479px) 92vw, (max-width: 767px) 90vw, (max-width: 991px) 76vw, 68vw" srcset="images/Group-2429-p-500.png 500w, images/Group-2429-p-800.png 800w, images/Group-2429-p-1080.png 1080w, images/Group-2429-p-1600.png 1600w, images/Group-2429-p-2000.png 2000w, images/Group-2429-p-2600.png 2600w, images/Group-2429.png 2780w" alt="Smart health cards" class="image-4">
+      <div class="text-block">With the upcoming vaccination schedules for most Americans, there was a need  to unify a standard for vaccination credentials. The SMART Health Card Framework was created to empower individuals to access a trustworthy and verifiable copy of their vaccination records in digital or paper form using open, interoperable standards. Individuals can then use those verifiable credentials for medical purposes and to demonstrate their health status to safely return to work, school, travel, and life.</div><img src="images/Group-2429.png" loading="lazy" width="836" srcset="images/Group-2429-p-500.png 500w, images/Group-2429-p-800.png 800w, images/Group-2429-p-1080.png 1080w, images/Group-2429-p-1600.png 1600w, images/Group-2429-p-2000.png 2000w, images/Group-2429-p-2600.png 2600w, images/Group-2429.png 2780w" sizes="(max-width: 479px) 92vw, (max-width: 767px) 90vw, (max-width: 991px) 76vw, 68vw" alt="Smart health cards" class="image-4">
       <h2 class="header-2 phase-2">Defining SMART Health Cards</h2>
-      <div class="text-block">Creating something as noble as an open-source standard in an active pandemic could not be achieved alone. The Commons Project was among the Steering Group, composed of the founding members of the coalition that are actively supporting and overseeing the implementation guide development process and ensuring that members of VCI faithfully implement the standard and adhere to the guiding principles of VCI. Other members of the Steering Group currently include representatives from Mayo Clinic, MITRE Corporation, Microsoft, The Commons Project Foundation,  Evernorth, CARIN Alliance, UC San Diego Health, and Apple.</div><img src="images/Screen-Shot-2022-05-01-at-6.26-1.png" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 90vw, (max-width: 991px) 76vw, 73vw" srcset="images/Screen-Shot-2022-05-01-at-6.26-1-p-500.png 500w, images/Screen-Shot-2022-05-01-at-6.26-1-p-800.png 800w, images/Screen-Shot-2022-05-01-at-6.26-1-p-1080.png 1080w, images/Screen-Shot-2022-05-01-at-6.26-1-p-1600.png 1600w, images/Screen-Shot-2022-05-01-at-6.26-1-p-2000.png 2000w, images/Screen-Shot-2022-05-01-at-6.26-1.png 2504w" alt="" class="image-18">
+      <div class="text-block">Creating something as noble as an open-source standard in an active pandemic could not be achieved alone. The Commons Project was among the Steering Group, composed of the founding members of the coalition that are actively supporting and overseeing the implementation guide development process and ensuring that members of VCI faithfully implement the standard and adhere to the guiding principles of VCI. Other members of the Steering Group currently include representatives from Mayo Clinic, MITRE Corporation, Microsoft, The Commons Project Foundation,  Evernorth, CARIN Alliance, UC San Diego Health, and Apple.</div>
+      <div class="w-embed">
+        <div class="canvas_viewer--canvasViewerWrapper--3YoMZ" data-loaded="true">
+          <div class="canvas_viewer--canvasViewer--26ZSW" style="background-image: url(&quot;https://s3-alpha.figma.com/hub/file/833438753/0c944689-35c9-44f0-9e80-27ad9447b815-cover.png&quot;);"></div>
+        </div>
+        <div class="canvas_viewer--canvasViewerWrapper--3YoMZ" data-loaded="true">
+          <div class="canvas_viewer--canvasViewer--26ZSW" style="background-image: url(&quot;https://s3-alpha.figma.com/hub/file/833438753/0c944689-35c9-44f0-9e80-27ad9447b815-cover.png&quot;);"></div>
+        </div>
+        <div class="canvas_viewer--canvasViewer--26ZSW" style="background-image: url(&quot;https://s3-alpha.figma.com/hub/file/833438753/0c944689-35c9-44f0-9e80-27ad9447b815-cover.png&quot;);"></div>
+      </div><img src="images/Screen-Shot-2022-05-01-at-6.26-1.png" loading="lazy" srcset="images/Screen-Shot-2022-05-01-at-6.26-1-p-500.png 500w, images/Screen-Shot-2022-05-01-at-6.26-1-p-800.png 800w, images/Screen-Shot-2022-05-01-at-6.26-1-p-1080.png 1080w, images/Screen-Shot-2022-05-01-at-6.26-1-p-1600.png 1600w, images/Screen-Shot-2022-05-01-at-6.26-1-p-2000.png 2000w, images/Screen-Shot-2022-05-01-at-6.26-1.png 2504w" sizes="(max-width: 479px) 92vw, (max-width: 767px) 90vw, (max-width: 991px) 76vw, 73vw" alt="" class="image-18">
       <div class="div-block-15">
         <a href="https://www.figma.com/community/file/969941235839543745" target="_blank" class="w-inline-block">
           <div class="button community-figma">Community Figma File</div>
@@ -215,7 +224,7 @@
           <h2 class="heading-3">Personal role</h2>
           <div class="text-block">I designed both the experience and interface of the verifier app, and was accountable for the product marketing aspects of the App Store/Google Play Store contents. As more SMART Health Cards were issued and app downloads began to rise, I also took the feedback from reviews and used them to improve the app. As SMART Health Cards began to be issued for COVID-19 tests, I redesigned the UX to support both types of health records.</div>
         </div>
-        <div class="w-col w-col-5 w-col-stack"><img src="images/Group-1135.png" loading="lazy" width="534" sizes="(max-width: 479px) 87vw, (max-width: 767px) 79vw, (max-width: 991px) 69vw, 32vw" srcset="images/Group-1135-p-500.png 500w, images/Group-1135-p-800.png 800w, images/Group-1135.png 1068w" alt="Smart Health Card Verifier" class="image-7"></div>
+        <div class="w-col w-col-5 w-col-stack"><img src="images/Group-1135.png" loading="lazy" width="534" srcset="images/Group-1135-p-500.png 500w, images/Group-1135-p-800.png 800w, images/Group-1135.png 1068w" sizes="(max-width: 479px) 87vw, (max-width: 767px) 79vw, (max-width: 991px) 69vw, 32vw" alt="Smart Health Card Verifier" class="image-7"></div>
       </div>
       <h2 class="header-2 phase-2 _48-margin">Milestones and Ecosystem Reach</h2>
       <div class="columns w-row">
@@ -226,7 +235,7 @@
             <li class="list-item">Android users can add their SMART Health Cards to Samsung Pay and Google Pay via CommonHealth, a service from The Commons Project.</li>
           </ul>
         </div>
-        <div class="column w-col w-col-8 w-col-stack"><img src="images/Frame-2450.png" loading="lazy" sizes="(max-width: 767px) 87vw, (max-width: 991px) 76vw, 68vw" srcset="images/Frame-2450-p-500.png 500w, images/Frame-2450-p-800.png 800w, images/Frame-2450-p-1080.png 1080w, images/Frame-2450.png 1636w" alt="CommonPass and Apple Wallet" class="image-10"></div>
+        <div class="column w-col w-col-8 w-col-stack"><img src="images/Frame-2450.png" loading="lazy" srcset="images/Frame-2450-p-500.png 500w, images/Frame-2450-p-800.png 800w, images/Frame-2450-p-1080.png 1080w, images/Frame-2450.png 1636w" sizes="(max-width: 767px) 87vw, (max-width: 991px) 76vw, 68vw" alt="CommonPass and Apple Wallet" class="image-10"></div>
       </div>
       <h2 class="heading-3">Reach</h2>
       <div class="w-row">
@@ -267,7 +276,7 @@
             </div>
           </a>
         </div>
-      </div><img src="images/Frame-2444.png" loading="lazy" width="1238" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 76vw, 97vw" srcset="images/Frame-2444-p-500.png 500w, images/Frame-2444-p-800.png 800w, images/Frame-2444-p-1080.png 1080w, images/Frame-2444-p-1600.png 1600w, images/Frame-2444-p-2000.png 2000w, images/Frame-2444.png 2072w" alt="CommonPass checked by airline for stress-free travel" class="tcp-infographic-4">
+      </div><img src="images/Frame-2444.png" loading="lazy" width="1238" srcset="images/Frame-2444-p-500.png 500w, images/Frame-2444-p-800.png 800w, images/Frame-2444-p-1080.png 1080w, images/Frame-2444-p-1600.png 1600w, images/Frame-2444-p-2000.png 2000w, images/Frame-2444.png 2072w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 76vw, 97vw" alt="CommonPass checked by airline for stress-free travel" class="tcp-infographic-4">
       <a href="#" class="lightbox-link w-inline-block w-lightbox">
         <div class="button demo">WATCH DEMO VIDEO</div>
         <script type="application/json" class="w-json">{
